# linion

./: .gitignore  BinaryDownloader.cpp  BinaryDownloader.h  CMakeLists.txt  DialogItemDelegate.cpp  DialogItemDelegate.h  ItemData.cpp  ItemData.h  QAddonListModel.cpp  QAddonListModel.h  QAddonProxyModel.cpp  QAddonProxyModel.h  QvObjectDelegate.cpp  QvObjectDelegate.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  configdialog.cpp  configdialog.h  configdialog.ui  images.qrc  linion.1  linion.de.1  linion.ru.1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_de.ts  mainwindow_ru.ts  preferences.h  snapcraft.yaml  terminalwindow.cpp  terminalwindow.h  terminalwindow.ui  translations.qrc  version.h
desktop/: linion.desktop
